# NFOpt

./: .gitignore  LICENSE  README.md  config.ini  depth_stats.csv  flowValues.csv  optimal_paths.csv  paths.py  pyproject.toml  ratioData.csv  ratioDataOptimized.csv  superSimple.py  test.py  test2.py  test3.py  test4.py  traffic_percentages.csv  variables.env-example
.github/workflows/: black.yml
backup/: linearopt.py  paths.py  pulpcook.py
nfopt/: main.py
nfopt/linear_optimization/: netflow.py  optimizer.py
nfopt/utils/: data.py  network.py
p6/: calc_type_enum.py  data_reading.py  main.py  maxUTILIZATION.py  network_model.py  squaredUtilization.py
p6/linearOptimization/: LinearOptimization.py  averageUtilization.py  maxUTILIZATION.py  squaredUtilization.py
p6/linear_optimization/: multiCommodity.py  netflow.py  optimizer.py
p6/models/: network.py
p6/utils/: data.py  log.py  network.py  visuals.py
sample-data/: flow-path-day1.csv  flow-traffic-day1.csv  links.csv
showTomorrow/: askforhelp  firstAlgo.py  ttt.md
tests/: test.py  test2.py
