[tool.poetry]
name = "p6"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [
        "sabotack <akhora21@student.aau.dk>",
        "sBejer <sbejer21@student.aau.dk>",
        "EmilML <emla21@student.aau.dk>",
        "ViktorPlatz <vplatz21@student.aau.dk>"
    ]

[tool.poetry.dependencies]
python = "^3.10"
gurobipy = "^11.0.1"
pandas = "^2.2.1"
pyarrow = "^15.0.2"
python-dotenv = "^1.0.1"
matplotlib = "^3.8.4"

[tool.poetry.scripts]
baseline = "p6.main:_baseline"
opt_average = "p6.main:_optimizeAverageUtilization"
opt_max = "p6.main:_optimizeMaxUtilization"
opt_squared = "p6.main:_optimizeSquaredUtilization"
graph = "p6.utils.visuals:plotAllData"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
