[tool.poetry]
name = "p6"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [
        "sabotack <akhora21@student.aau.dk>",
        "sBejer <sbejer21@student.aau.dk>",
        "EmilML <emla21@student.aau.dk>",
        "ViktorPlatz <vplatz21@student.aau.dk>"
    ]

[tool.poetry.dependencies]
python = "^3.10"
gurobipy = "^11.0.1"
pandas = "^2.2.1"
pyarrow = "^15.0.2"
python-dotenv = "^1.0.1"
black = "^24.4.2"
matplotlib = "^3.8.4"

[tool.poetry.scripts]
p6 = "p6.main:main"
graph = "p6.utils.visuals:plotAllData"
links = "p6.utils.visuals:plotLinks"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
