[tool.poetry]
name = "nfopt"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [
        "sabotack <akhora21@student.aau.dk>",
        "sBejer <sbejer21@student.aau.dk>",
        "EmilML <emla21@student.aau.dk>",
        "ViktorPlatz <vplatz21@student.aau.dk>"
    ]

[tool.poetry.dependencies]
python = "^3.10"
gurobipy = "^11.0.1"
pandas = "^2.2.1"
pyarrow = "^15.0.2"
python-dotenv = "^1.0.1"
black = "^24.4.2"

[tool.poetry.scripts]
nfopt = "nfopt.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
